--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,5 @@
 <script src="{{ "/js/main.js" | prepend: site.baseurl }}"></script>
+<script src="{{ "/js/not-wikipedia.js" | prepend: site.baseurl }}"></script>
 
 {% if site.theme_settings.footer_text %}
 <footer class="site-footer">
