--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -28,3 +28,8 @@ $feature-image-size: cover; // options include "cover", "contain", "auto"
 // Header description box
 $header-desc-background-color: #0070BB;
 $header-desc-text-color: #FFF;
+
+// Responsive screens
+$screen-sm: 768px;
+$screen-md: 992px;
+$screen-lg: 1200px;
