--- a/_sass/layouts/_posts.scss
+++ b/_sass/layouts/_posts.scss
@@ -1,9 +1,22 @@
 article,
 .comments {
+
+  @media (max-width: $screen-md) { 
+    padding:0 20px 0;
+  }
+
+  @media (min-width: $screen-md) and (max-width: $screen-lg){ 
+    padding:0 5% 0;
+  }
+
   padding:0 20% 0;
+
+
+
   float: left;
   width: 100%;
 }
+
 article {
   header {
     margin-bottom: 6%;
@@ -56,15 +69,6 @@ header {
 
 .post-content {
   
-
-  img {
-    padding: 20px;
-  }
-
-  #home-page {
-  }
-
-
   form {
       input[type="text"], input[type="email"] {
         width:100%;
@@ -104,12 +108,10 @@ header {
 
 
 .not-wikipedia {
-
-  .subscription-service {
-
-    // img {
-    //   padding: 0;
-    // }
+  
+  .wiki-index {
+    display: inline-block;
+    max-width: 49%;
   }
 
 }
