--- a/_sass/layouts/_posts.scss
+++ b/_sass/layouts/_posts.scss
@@ -9,7 +9,7 @@ article,
     padding:0 5% 0;
   }
 
-  padding:0 20% 0;
+  padding:0 10% 0;
 
 
 
@@ -108,10 +108,17 @@ header {
 
 
 .not-wikipedia {
-  
-  .wiki-index {
-    display: inline-block;
-    max-width: 49%;
+
+  @media (min-width: $screen-md) { 
+    .wiki-index {
+      display: inline-block;
+      max-width: 49%; 
+    }
   }
 
+  .image-caption-table {
+    .title {
+      text-align: left;
+    }
+  }
 }
