--- a/_sass/base/_global.scss
+++ b/_sass/base/_global.scss
@@ -1,45 +1,45 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-html {
-  background: $background-color;
-}
+// * {
+//   margin: 0;
+//   padding: 0;
+//   box-sizing: border-box;
+// }
+// html {
+//   background: $background-color;
+// }
 
-// Typography
-::selection {
-  background: $selection-color;
-}
-::-moz-selection {
-  background: $selection-color;
-}
-body {
-  color: $text-color;
-  font-family: $font-family-main;
-  font-size: $font-size;
-  word-wrap: break-word;
-}
-h1, h2, h3, h4, h5, h6 {
-  font-family: $font-family-headings;
-  line-height: 1.3;
-  margin: 0.67em 0;
-  a {
-    color: $text-color;
-  }
-}
-h1 {
-  font-size: 2.5em;
-}
-h2 {
-  font-size: 2em;
-}
-h3 {
-  font-size: 1.5em;
-}
-h4 {
-  font-size: 1.15em;
-}
+// // Typography
+// ::selection {
+//   background: $selection-color;
+// }
+// ::-moz-selection {
+//   background: $selection-color;
+// }
+// body {
+//   color: $text-color;
+//   font-family: $font-family-main;
+//   font-size: $font-size;
+//   word-wrap: break-word;
+// }
+// h1, h2, h3, h4, h5, h6 {
+//   font-family: $font-family-headings;
+//   line-height: 1.3;
+//   margin: 0.67em 0;
+//   a {
+//     color: $text-color;
+//   }
+// }
+// h1 {
+//   font-size: 2.5em;
+// }
+// h2 {
+//   font-size: 2em;
+// }
+// h3 {
+//   font-size: 1.5em;
+// }
+// h4 {
+//   font-size: 1.15em;
+// }
 blockquote {
     border-left: 2px solid;
     padding: 1em 1em;
