--- a/assets/main.scss
+++ b/assets/main.scss
@@ -4,6 +4,23 @@
 @import "variables";
 @import "bootstrap/scss/bootstrap";
 
+// // External
+@import 'external/reset';
+@import 'external/solarized-dark';
+
+// // Base
+@import 'base/variables';
+@import 'base/global';
+@import 'base/utility';
+
+// // Posts
+@import 'layouts/posts';
+@import 'layouts/index';
+
+// Partials
+@import 'includes/header';
+@import 'includes/footer';
+
 .content {
   font-size: $custom-font-size;
 }
