--- a/css/main.scss
+++ b/css/main.scss
@@ -1,18 +1,18 @@
 ---
 ---
-// External
-@import 'external/reset';
-@import 'external/solarized-dark';
+// // External
+// @import 'external/reset';
+// @import 'external/solarized-dark';
 
-// Base
-@import 'base/variables';
-@import 'base/global';
-@import 'base/utility';
+// // Base
+// @import 'base/variables';
+// @import 'base/global';
+// @import 'base/utility';
 
-// Posts
-@import 'layouts/posts';
-@import 'layouts/index';
+// // Posts
+// @import 'layouts/posts';
+// @import 'layouts/index';
 
-// Partials
-@import 'includes/header';
-@import 'includes/footer';
+// // Partials
+// @import 'includes/header';
+// @import 'includes/footer';
