--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -4,5 +4,25 @@ $custom-font-size: 16px;
 @import "../node_modules/bootstrap/scss/variables";
 
 
+@import "variables";
+@import "bootstrap/scss/bootstrap";
+
+// // External
+@import 'external/reset';
+@import 'external/solarized-dark';
+
+// // Base
+@import 'base/variables';
+@import 'base/global';
+@import 'base/utility';
+
+// // Posts
+@import 'layouts/posts';
+@import 'layouts/index';
+
+// Partials
+@import 'includes/header';
+@import 'includes/footer';
+
 
 
