--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,6 +2,7 @@
 <html class="no-js">
   {% include head.html %}
   <body>
+  <p class="float-right hidden-sm-down">I am a paragraph</p>
     <div class="container-fluid">
       {% include header.html %}
       <div class="row {{ page.class }}">{{ content }}</div>
