--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,7 +1,6 @@
 
 $custom-font-size: 16px;
-@import "../node_modules/bootstrap/scss/functions";
-@import "../node_modules/bootstrap/scss/variables";
+@import "../node_modules/bootstrap/scss/bootstrap.scss";
 
 // // External
 @import 'external/reset';
