Create figure include option. Work on incorporating Bootstrap 4.

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: post-header
 ---
 <article {% if page.feature-img %}class="feature-image"{% endif %}>
-  <section class="post-content {{ page.class }}">{{ content }}</section>
+  <section class="post-content mx-auto col col-md-10">{{ content }}</section>
 </article>
 
 <!-- Disqus -->
