--- a/_includes/modal.html
+++ b/_includes/modal.html
@@ -3,7 +3,7 @@
 
 <!-- Modal -->
 <div class="modal fade" id="modal_target_{{ include.id }}" tabindex="-1" role="dialog" aria-labelledby="{{ include.title }}" aria-hidden="true">
-  <div class="modal-dialog" role="document">
+  <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
       
       <!-- Title section -->
