--- a/_layouts/post-header.html
+++ b/_layouts/post-header.html
@@ -2,10 +2,10 @@
 <html class="no-js">
   {% include head.html %}
   <body>
-    {% include header-post.html %}
-    <div class="content">
-      {{ content }}
+    <div class="container-fluid">
+      {% include header-post.html %}
+      <div class="row {{ page.class }}">{{ content }}</div>
+      {% include footer.html %}
     </div>
-    {% include footer.html %}
   </body>
 </html>
