--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,9 +1,9 @@
 ---
 layout: post-header
 ---
-<article {% if page.feature-img %}class="feature-image"{% endif %}>
-  <section class="post-content mx-auto col col-md-10">{{ content }}</section>
-</article>
+<!-- <article {% if page.feature-img %}class="feature-image"{% endif %}> -->
+  <div class="post-content mx-auto col col-md-10">{{ content }}</div>
+<!-- </article> -->
 
 <!-- Disqus -->
 {% if site.theme_settings.disqus_shortname %}
