--- a/_sass/base/_global.scss
+++ b/_sass/base/_global.scss
@@ -3,6 +3,7 @@
   padding: 0;
   box-sizing: border-box;
 }
+
 html {
   background: $background-color;
 }
@@ -20,26 +21,45 @@ body {
   font-size: $font-size;
   word-wrap: break-word;
 }
+
 h1, h2, h3, h4, h5, h6 {
   font-family: $font-family-headings;
-  line-height: 1.3;
-  margin: 0.67em 0;
   a {
     color: $text-color;
   }
 }
+
+// h1 {
+//   font-size: 2.5em;
+// }
+// h2 {
+//   font-size: 2em;
+// }
+// h3 {
+//   font-size: 1.5em;
+// }
+// h4 {
+//   font-size: 1.15em;
+// }
+
 h1 {
-  font-size: 2.5em;
+  font-size: calc(2.0em + 3.0vw) !important;
+  font-weight: bold !important;
 }
+
 h2 {
-  font-size: 2em;
+  font-size: calc(1.5em + 1.0vw) !important;
+  font-weight: 500 !important;
 }
+
 h3 {
-  font-size: 1.5em;
+  font-size: calc(1.17em + 0.75vw)  !important;
 }
+
 h4 {
-  font-size: 1.15em;
+  font-size: calc(1.0em + 0.5vw) !important;
 }
+
 blockquote {
     border-left: 2px solid;
     padding: 1em 1em;
