--- a/_sass/layouts/_posts.scss
+++ b/_sass/layouts/_posts.scss
@@ -3,22 +3,22 @@ article,
 }
 
 article {
-  header {
-    margin-bottom: 6%;
-    text-align: center;
-  }
+  // header {
+  //   margin-bottom: 6%;
+  //   text-align: center;
+  // }
   a:hover {
     @extend %link-hover;
   }
   .footnotes {
     font-size: 0.9em;
   }
-  p {
-    img {
-      text-align:center;
-      margin:0 auto;
-    }
-  }
+  // p {
+  //   img {
+  //     text-align:center;
+  //     margin:0 auto;
+  //   }
+  // }
 }
 header {
   h1 {
@@ -100,12 +100,6 @@ header {
   //     max-width: 49%; 
   //   }
   // }
-
-  .image-caption-table {
-    .title {
-      text-align: left;
-    }
-  }
 
   .fig-5-large {
     @media (max-width: $screen-md) { 
