Work on styling and BlocJams post.

--- a/_includes/modal.html
+++ b/_includes/modal.html
@@ -1,5 +1,5 @@
 <!-- Text Toggle-->
-<a href="#" data-toggle="modal" data-target="#modal_target_{{ include.id }}">{{ include.link-text }}</a>
+<a href="#" class="modal-anchor" data-toggle="modal" data-target="#modal_target_{{ include.id }}">{{ include.link-text }}</a>
 
 <!-- Modal -->
 <div class="modal fade" id="modal_target_{{ include.id }}" tabindex="-1" role="dialog" aria-labelledby="{{ include.title }}" aria-hidden="true">
