--- a/_sass/layouts/_posts.scss
+++ b/_sass/layouts/_posts.scss
@@ -91,6 +91,18 @@ header {
     }
 }
 
+// Modals: move p's to next line
+// Also move p's inside ul's to the same line
+.post-content {
+  p {
+    display: initial;
+  }
+
+  .modal + p {
+    margin-left: -5px;
+  }
+}
+
 
 .not-wikipedia {
 
@@ -113,3 +125,13 @@ header {
     }
   }
 }
+
+.blocjams {
+
+  .landing-animation {
+    max-width: 795px;
+  }
+}
+
+
+
