more work on the stupid modals and some work on the BlocJams post

--- a/_includes/modal.html
+++ b/_includes/modal.html
@@ -1,5 +1,5 @@
-<!-- Text Toggle-->
-<a href="#" class="modal-anchor" data-toggle="modal" data-target="#modal_target_{{ include.id }}">{{ include.link-text }}</a>
+<!-- Include this in md file -->
+<!-- <a href="#" class="modal-anchor" data-toggle="modal" data-target="#modal_target_include.id"> include.link-text </a> -->
 
 <!-- Modal -->
 <div class="modal fade" id="modal_target_{{ include.id }}" tabindex="-1" role="dialog" aria-labelledby="{{ include.title }}" aria-hidden="true">
