--- a/_sass/layouts/_posts.scss
+++ b/_sass/layouts/_posts.scss
@@ -144,8 +144,12 @@ header {
     max-width: 795px;
   }
 
-  .album-on-hover {
+  .indent-item-in-list {
     margin-left: 20px;
+  }
+
+  img {
+    min-width: 500px;
   }
 }
 
