finish up BlocJams post

--- a/_sass/layouts/_posts.scss
+++ b/_sass/layouts/_posts.scss
@@ -109,10 +109,10 @@ header {
     position: relative;
   }
 
-  .modal + p {
-    display: initial;
-    margin-left: -5px;
-  }
+  // .modal + p {
+  //   display: initial;
+  //   margin-left: -5px;
+  // }
 }
 
 
