Finish Not Reddit post and a bit of styling

--- a/_sass/layouts/_posts.scss
+++ b/_sass/layouts/_posts.scss
@@ -148,8 +148,13 @@ header {
     margin-left: 20px;
   }
 
+}
+
+.not-reddit {
+
   img {
-    min-width: 500px;
+    padding-left: 15px;
+    padding-right: 15px;
   }
 }
 
