--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,6 +1,7 @@
 ---
 layout: post-header
 ---
-<article>
-  <section class="post-content">{{ content }}</section>
-</article>
+
+
+<div class="post-content mx-auto col col-md-10">{{ content }}</div>
+
