--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header class="site-header">
-	<nav class="site-nav">
+	<nav class="site-nav pull-right">
 		<ul>
 			{% for page in site.pages %}
 			{% if page.title and page.hide != true %}
