--- a/_sass/base/_variables.scss
+++ b/_sass/base/_variables.scss
@@ -31,6 +31,7 @@ $header-desc-background-color: #0070BB;
 $header-desc-text-color: #FFF;
 
 // Responsive screens
-$screen-sm: 768px;
-$screen-md: 992px;
-$screen-lg: 1200px;
+$screen-sm: 576px;
+$screen-md: 768px;
+$screen-lg: 992px;
+$screen-xl: 1200px;
