Add domain grantbackes.com

--- a/_sass/layouts/_index.scss
+++ b/_sass/layouts/_index.scss
@@ -42,6 +42,11 @@
 .call-out p:last-child {
   margin-bottom: 0;
 }
+
+.announcement {
+  font-style: italic;
+}
+
 // Post listing
 .posts {
   @extend %padding-header;
